wp-content/themes/tcs-responsive/css/style.css
/* ... */
    #hero .trackAn i{
        background: url(../i/ico-an.png) 50% 0 no-repeat;
    }

#hero .tracksInfo{
	margin: 0 -12px;
    padding: 22px 0 5px;
}
    #hero .trackInfo{
       height: 120px; 
       background: #fff;
       box-shadow: 0 1px 1px rgba(0,0,0,0.5);
       font-size: 14px;
       color: #666;    
       position: relative;
}
    #hero .trackInfo i{
       height: 89px;
       width: 89px;
    
       position: absolute;
       left: 13px;
       top: 13px;
}
    #hero .trackInfo p{
       padding-left: 118px;
    }
    #hero .trackInfo h3{
       display: block;
       color: #01a8e9;       
       padding: 16px 0 3px 118px;
    }
    #hero .trackInfo.trackSD h3{
        color: #228400;
    }
    #hero .trackInfo.trackAn h3{
        color: #ff7400;
    }
    #hero .trackInfo a{
       display: inline-block;
    
       font-size: 12px;
}
/* lay Challenges */
.layChallenges{
    display: block;
}
    .layChallenges  header{
        border-bottom: 1px solid #e7e7e7;
    
        padding-bottom: 12px;
        position: relative;
        font-size: 16px;
}
    .layChallenges  header .rt{
        position: absolute;
        right: 0;
    
        top: 4px;
}
    .layChallenges  header .rt a{
        padding-top: 1px;
        display: inline-block;
        float: left;
        margin-left: 20px;
    
        line-height: 36px;
        -moz-transition-duration: 0s; -webkit-transition-duration: 0s; transition-duration: 0s;
        border-top: 3px solid transparent;
}   
    .layChallenges  header .rt .gridView:hover,
    .layChallenges  header .rt .listView:hover{
        border-top: 3px solid #FF8A00;
    }


    .layChallenges .views > a{
    display: inline-block;
    height: 30px;
    width: 30px;
    background: url(../i/ico-views.png) no-repeat;
    background-position: 0 0;
}
    .layChallenges .views .gridView{
        background-position: 0 -47px;
    }
    .layChallenges .views .listView{
        background-position: 0 -147px;
    }
    
    .layChallenges .views .gridView.isActive{
        background-position: 0 3px;
        cursor: default;
    }
    .layChallenges .views .gridView.isActive:hover{
        border-top: 3px solid rgba(0, 0, 0, 0);
    }
    
    .layChallenges .views .listView.isActive{
        background-position: 0 -97px;
        cursor: default;
    }
    .layChallenges .views .listView.isActive:hover{
        border-top: 3px solid transparent;
    }
    
.layChallenges .actions{
    min-height: 25px;
    position: relative;
    font-size: 16px;
    padding: 16px 0 15px;
    z-index: 10;
}
    .layChallenges .actions .rt{
        float: right;    
        margin-top: -25px;
        line-height: 24px;
}
    .layChallenges .actions .lt{
        float: left;
    
        line-height: 24px;
        margin-top: -25px;
        min-width: 118px;
        min-height: 24px;
}
    .layChallenges .actions .lt > span{
        float: left;
        margin-right: 8px;
    }
    .layChallenges .challengeType{
    
        width: 300px;
        margin: 0 auto;
}
    .layChallenges .challengeType ul{
        overflow: hidden;
    
        display: block;
        font-size: 16px;
        padding: 3px 0;
}
    .layChallenges .challengeType ul > li{
        float: left;    
        border-left: 1px solid #D0D0D1;
        height: 16px;
        line-height: 18px;
}
    .layChallenges .challengeType ul li:first-child{
        border-left: 0;
    }
    .layChallenges .challengeType ul .link{
        margin: 0 10px;        
    }
    .layChallenges .challengeType ul .link.active,
    .layChallenges .challengeType ul .link.active:hover{
        color: #666;
        cursor: default;
    }
    .layChallenges .actions .searchLink{
        background: url(../i/ico-zoom.png) 0 50% no-repeat;
        padding-left: 27px;
    
        line-height: 22px;
        height: 22px;
        display: inline-block;
}
    .layChallenges .actions .upDown{
        display: inline-block;
        padding-right: 20px;
        position: relative;
    
        margin-left: 4px;
}
    
    .layChallenges .actions .upDown i{
        position: absolute;
        right: 0;
        top: 2px;
        width: 13px;
        height: 24px;
        background: url(../i/arrows-ud.png) no-repeat;
        background-position: 0 8px;       
    }
    .layChallenges .actions .on .upDown i{
        background-position: 100% -13px;
        -moz-transition-duration: .3s; -webkit-transition-duration: .3s; transition-duration: .3s;    
    }
    .lt .ddWrap{
         float: left;
    }
.ddWrap{
    display: inline-block;
    vertical-align: top;
    height: 24px;
}
    .ddWrap .list{
        border: 1px solid #ccc;
        border-top: none;
    
        display: none;
        background: #fff;
}
    .ddWrap.on .list{
        display: block;
    }
    .ddWrap .list li{
        cursor: pointer;
        border-top: 1px solid #ccc;
        padding: 0 5px;
        font-size: 12px;
    
        line-height: 26px;
        text-align: left;
}
    .ddWrap .list li:hover,
    .ddWrap .list li.active{
        background: #f7f7f7;
    }
/* dataChanges */    
#mainContent .dataChanges{
    padding-top: 19px;
    font-size: 16px;
    
    min-height: 20px;
    overflow: hidden;
}
    #mainContent .dataChanges .lt{
        float: left;        
    }
    #mainContent .dataChanges .rt{
        float: right;        
    
        text-align: right;
        overflow: hidden;
}
    #mainContent .dataChanges .nextLink{
        display: inline-block;   
        padding-right: 20px;
        position: relative;
        padding-left: 40px;
        float: left;
}   
    #mainContent .dataChanges .nextLink i{
        top: 2px;
    }
    #mainContent .dataChanges .prevLink{
        display: inline-block;   
        padding-left: 20px;
        position: relative;
        float: left;
}   
    #mainContent .dataChanges .prevLink.hide{
        display: none;
    }
    #mainContent .dataChanges .prevLink i{
        top: 2px;
    }
/* ... */

